# dw_auditor

./: .gitignore  README.md  audit.py  audit_config.yaml  audit_config_examples.yaml  audit_config_ref.yaml  main.py  project_readme_old.md  pyproject.toml  requirements.txt  test3.html
.claude/: .claudeignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  CONVENTIONS.md
_old/: README_old.md  audit_old.py  cli.py  d3.html  er.html  graph_nx.py  graphviz.py
_old/html_insp/: art1.html  col_summary1.html  col_summary2.html  label1.html
audit_results/audit_run_20251020_160635/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_160853/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_161032/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_dim_station_summary.csv  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_161107/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_161137/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_161800/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_162631/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_dim_station_summary.csv  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_162730/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_163214/: audit_dim_station.csv  audit_dim_station.html  audit_dim_station.json  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_163355/: audit_dim_station.html  audit_dim_station.json  audit_dim_station_summary.csv  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_164614/: audit_dim_station.html  audit_dim_station.json  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_165906/: audit_dim_station.html  audit_dim_station.json  audit_dtm_station_distance.csv  audit_fct_avaibility.csv  (+6 more)
doc/: checks.md  insights.md
dw_auditor/: __init__.py  __main__.py
dw_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
html_insp/: test1.html  test2.html  test4.html  test5.html  test6.html  test7.html  test8.html
tests/: README.md  __init__.py  conftest.py
(+441 files in other folders)
