[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dw-auditor"
version = "1.0.0"
requires-python = ">=3.10"

dependencies = [
    "polars>=0.20.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "ibis-framework[duckdb]>=9.0.0",
    "ibis-framework[bigquery]>=9.0.0",
    "ibis-framework[snowflake]>=9.0.0",
    "google-cloud-bigquery>=3.0.0",
    "snowflake-connector-python>=3.0.0",
]

[project.scripts]
dw_auditor = "dw_auditor.__main__:main"

[tool.setuptools]
packages = ["dw_auditor"]
